# sendinblue-template-manager

./: .gitignore  README.md  sendinblue-template.py  sendinblue_templates.py  setup.cfg
