[metadata]
name = sendinblue_templates
version = 0.0.2
author = tofran
author_email = me@tofran.com
description = Sendinblue Template Downloader/Uploader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tofran/sendinblue-template-manager
project_urls =
    Bug Tracker = https://github.com/tofran/sendinblue-template-manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests~=2.25.1
python_requires = >=3.6


[options.entry_points]
console_scripts =
    sendinblue-templates = sendinblue_templates:main